# souxmar

./: .clang-format  .clang-tidy  .editorconfig  .gitattributes  .gitignore  CHANGELOG.md  CMakeLists.txt  CMakePresets.json  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  THIRD_PARTY_LICENSES.md  vcpkg.json
benchmarks/: CMakeLists.txt  bench_face_tag.cpp  bench_heap_accountant.cpp  bench_mesh_construction.cpp  bench_mmap_buffer.cpp  bench_plugin_dispatch.cpp
benchmarks/baselines/: README.md  bench_face_tag.json  bench_heap_accountant.json  bench_mesh_construction.json  bench_mmap_buffer.json  bench_plugin_dispatch.json
bindings/python/: CMakeLists.txt  README.md  pyproject.toml
bindings/python/examples/: cantilever.py
bindings/python/pysouxmar/: __init__.py
bindings/python/src/: pysouxmar.cpp
bindings/python/tests/: conftest.py  test_agent_tools.py  test_basics.py  test_end_to_end.py
examples/: CMakeLists.txt
examples/cantilever-beam/: README.md  pipeline.yaml
examples/mesh-comparison/: README.md  compare.py  pipeline-gmsh.yaml  pipeline-grid.yaml
examples/modal-beam/: README.md  pipeline.yaml
examples/pipe-bend/: README.md  pipeline.yaml
examples/plugins/blender-reader/: CMakeLists.txt  blender_reader.cpp  souxmar-plugin.toml
examples/plugins/cfd-stub/: CMakeLists.txt  cfd_stub.cpp  souxmar-plugin.toml
examples/plugins/elasticity-stub/: CMakeLists.txt  elasticity_stub.cpp  souxmar-plugin.toml
examples/plugins/fenicsx-solver/: CMakeLists.txt  README.md  fenicsx_solver.cpp  poisson.py  souxmar-plugin.toml
examples/plugins/gmsh-mesher/: CMakeLists.txt  gmsh_mesher.cpp  souxmar-plugin.toml
examples/plugins/grid-mesher/: CMakeLists.txt  grid_mesher.cpp  souxmar-plugin.toml
examples/plugins/heat-solver/: CMakeLists.txt  heat_solver.cpp  souxmar-plugin.toml
examples/plugins/hello-mesher/: CMakeLists.txt  README.md  hello_mesher.cpp  souxmar-plugin.toml
examples/plugins/hello-writer/: CMakeLists.txt  README.md  hello_writer.cpp  souxmar-plugin.toml
examples/plugins/mesh-quality/: CMakeLists.txt  mesh_quality.cpp  souxmar-plugin.toml
examples/plugins/modal-stub/: CMakeLists.txt  modal_stub.cpp  souxmar-plugin.toml
examples/plugins/obj-reader/: CMakeLists.txt  obj_reader.cpp  souxmar-plugin.toml
examples/plugins/occt-reader/: CMakeLists.txt  occt_reader.cpp  souxmar-plugin.toml
examples/plugins/openfoam-solver/: CMakeLists.txt  openfoam_solver.cpp  souxmar-plugin.toml
examples/plugins/scalar-magnitude/: CMakeLists.txt  scalar_magnitude.cpp  souxmar-plugin.toml
examples/plugins/stl-reader/: CMakeLists.txt  souxmar-plugin.toml  stl_reader.cpp
examples/plugins/vtu-writer/: CMakeLists.txt  souxmar-plugin.toml  vtu_writer.cpp
examples/stl-cube/: README.md  pipeline.yaml
examples/swap-mesher/: README.md  gmsh.yaml  grid.yaml
examples/thermal-fin/: README.md  pipeline.yaml
services/account-portal/: Cargo.toml  README.md
services/billing/: Cargo.toml  README.md
services/cloud-sync/: Cargo.toml  README.md
services/compute-offload/: Cargo.toml  README.md
services/managed-ai-proxy/: Cargo.toml  README.md
services/plugin-marketplace/: Cargo.toml  README.md
src/: CMakeLists.txt
src/ai/: CMakeLists.txt  audit_log.cpp  budget_config.cpp  provider.cpp  provider_config.cpp  tool_dispatcher.cpp
src/ai/tools/: mesh.cpp  (+18 more)
src/c-bridge/: CMakeLists.txt  pipeline.cpp  provider.cpp  updater.cpp
src/cli/: CMakeLists.txt  main.cpp
src/core/: CMakeLists.txt  c_abi_brep.cpp  c_abi_buffer.cpp  c_abi_field.cpp  c_abi_field_stream.cpp  c_abi_geometry.cpp  c_abi_mesh.cpp  c_abi_sketch.cpp  c_abi_surface_stream.cpp  c_abi_timeseries.cpp  face_topology.cpp  field.cpp  field_stream.cpp  geometry.cpp  mesh.cpp  mesh_quality.cpp  pvd.cpp  surface_stream.cpp  time_series.cpp  topology.cpp  version.cpp
src/crypto/: CMakeLists.txt  primitives.cpp
src/desktop/: index.html  package.json  tsconfig.json  vite.config.ts
src/pipeline/: CMakeLists.txt  c_abi_value.cpp  cache.cpp  dag.cpp  parallel_runner.cpp  parser.cpp  registry_dispatcher.cpp  runner.cpp  value.cpp
src/plugin-host/: CMakeLists.txt  conformance.cpp  discovery.cpp  guard.cpp  heap_accountant.cpp  index.cpp  loader.cpp  manifest.cpp  registry.cpp  subprocess.cpp
src/updater/: CMakeLists.txt  apply.cpp  embedded_trust.cpp  fetcher.cpp  install_layout.cpp  manifest.cpp  rollback_log.cpp  state_machine.cpp  update_state.cpp  verifier.cpp
tests/: CMakeLists.txt
tests/integration/: CMakeLists.txt  test_c_bridge_pipeline.cpp  test_c_bridge_provider.cpp  test_c_bridge_updater.cpp  test_cfd_stub.cpp  test_cli_smoke.cpp  test_config.h.in  test_conformance.cpp  test_elasticity_stub.cpp  test_load_hello_mesher.cpp  test_mesh_quality_plugin.cpp  test_obj_reader.cpp  test_pipeline_end_to_end.cpp  test_postproc_end_to_end.cpp  test_reader_end_to_end.cpp  test_swap_mesher.cpp  test_update_apply_rollback_cli.cpp  test_update_check_cli.cpp  test_vtu_consumer_conformance.cpp
tests/unit/: CMakeLists.txt  test_ai_provider.cpp  test_ai_tools.cpp  test_budget_config.cpp  test_c_abi_buffer.cpp  test_c_abi_handles.cpp  test_crypto_primitives.cpp  test_discovery.cpp  test_element_type.cpp  test_face_topology.cpp  test_field.cpp  test_field_stream.cpp  test_geometry.cpp  test_guard.cpp  test_heap_accountant.cpp  test_manifest.cpp  test_mesh.cpp  test_mesh_quality.cpp  test_parallel_runner.cpp  test_pipeline_cache.cpp  test_pipeline_dag.cpp  test_pipeline_parser.cpp  test_pipeline_runner.cpp  test_pipeline_value.cpp  test_plugin_index.cpp  test_provider_config.cpp  test_pvd.cpp  test_registry.cpp  test_subprocess.cpp  test_surface_stream.cpp  test_tag.cpp  test_time_series.cpp  test_topology.cpp  test_update_apply.cpp  test_update_embedded_trust.cpp  test_update_fetcher.cpp  test_update_install_layout.cpp  test_update_manifest.cpp  test_update_rollback_log.cpp  test_update_state.cpp  (+3 more)
tests/visual/: BASELINES.md  README.md  package.json  playwright.config.ts
tools/conformance/: CMakeLists.txt  main.cpp
tools/eval/: CMakeLists.txt  main.cpp
tools/eval-llm/: CMakeLists.txt  main.cpp
(+339 files in other folders)
