[package]
name        = "account-portal"
version     = "0.1.0"
description = "souxmar account portal — sign-in, tokens, billing checkout (MVP scaffold)"
edition     = "2021"
license     = "Apache-2.0"

# Sprint 17 push 2 scaffold. ADR-0026 documents the architecture.

[[bin]]
name = "account-portal"
path = "src/main.rs"

[dependencies]
axum               = "0.7"
tokio              = { version = "1", features = ["full"] }
serde              = { version = "1", features = ["derive"] }
serde_json         = "1"
tracing            = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
