[package]
name        = "managed-ai-proxy"
version     = "0.1.0"
description = "souxmar Pro-tier managed-AI gateway (MVP scaffold)"
edition     = "2021"
license     = "Apache-2.0"

# Sprint 14 push 3 scaffold. ADR-0019 documents the architecture.
# The binary is intentionally outside the workspace at
# src/desktop/src-tauri/souxmar-bridge/ — its dependency cone
# (axum, tokio, postgres later) is irrelevant to the engine /
# desktop builds and dragging it in via Cargo workspace would
# slow the desktop CI for no benefit.

[[bin]]
name = "managed-ai-proxy"
path = "src/main.rs"

[dependencies]
axum         = "0.7"
tokio        = { version = "1", features = ["full"] }
serde        = { version = "1", features = ["derive"] }
serde_json   = "1"
tracing      = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
